# py_web_HW02

./: DockerFile  README.md  pyproject.toml  requirements.txt
infinity/: Abstract_class_terminal.py  address_book.py  address_class.py  birthday.py  email_class.py  exceptions.py  main.py  name.py  note.py  phone.py  record.py  sanytize.py  sort_folder.py  suggest.py
