[tool.poetry]
name = "infinity"
version = "0.1.0"
description = "HW02_py_web"
authors = ["Artem Dorofeev <a.dorofeev@ukr.net>"]4
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
